--- a/Home.css
+++ b/Home.css
@@ -1,8 +1,23 @@
 <style>
-h1 {font-size: 50px;
-color: black;}
+h1 {
+	color: black;
+}
+h1 {
+text-align: center;
+position: top 50%; bottom:50%; 
+}
+h1 {
+font-family: serif;
+font-style: normal;
+font-size: 60px; 
+font-weight: normal;
+}
 body {
 	background-image: url("Library2.jpg");
 	background-size: cover;
+ }
+ h2 {
+ 	text-align: right;
+ 	font-size:20px;
  }
 </style>
