--- a/Home.css
+++ b/Home.css
@@ -11,11 +11,22 @@ font-family: serif;
 font-style: normal;
 font-size: 60px; 
 font-weight: normal;
+padding-top: 30px;
+padding-bottom: 30px;
+}
+h2 {
+	position: right;
 }
 body {
 	background-image: url("Library2.jpg");
 	background-size: cover;
  }
+.Aberdeen {
+ 	width: 150px;
+ 	height: 100px;
+    border-radius: 50%;
+}
+ 
  h2 {
  	text-align: right;
  	font-size:20px;
