--- a/Home.css
+++ b/Home.css
@@ -7,80 +7,37 @@ text-align: center;
 position: top 50%; bottom:50%; 
 }
 h1 {
-font-family: serif;
+font-family: 'Playfair Display', serif;
 font-style: normal;
 font-size: 60px; 
 font-weight: normal;
 padding-top: 30px;
 padding-bottom: 30px;
 }
+
 h2 {
 	position: right;
 }
-body {
-	background-image: url("Library2.jpg");
-	background-size: cover;
- }
+
+
 .Aberdeen {
- 	width: 175px;
- 	height: 125px;
-    border-radius: 50%;
+ 	width: 180px;
+ 	height: 100px;
+    border-radius: 70%;
+
 }
  
  h2 {
  	text-align: right;
  	font-size:20px;
  }
-@keyframes slider {
+ 
+ ul {padding:10px;
+background: black;}
+li {display: inline;
+padding: 0px 10px 0px 10px;
+}
+a{color: white;}
 
-0% {
-	left: 0;
-}
-
-20% {
-	left: 0;
-}
-25% {
-	left: -100%;
-}
-45% {
-	left: -100%;
-}
-50% {
-	left: -200%;
-}
-70% {
-	left: -200%;
-}
-
-75% {
-	left: -300%;
-}
-
-95% {
-	left: -300%;
-}
-
-100% {left: -400%;
-
-}
-}
-
-#slider {
-	overflow: hidden;
-}
-#slider figure img {
-	width: 20%;
-	float: left;
-}
-
-#slider figure {
-	position: relative;
-	width: 200%;
-	margin: 0;
-	left: 0;
-	text-align: left;
-	font-size: 0;
-	animation: 20s slider infinite;
-}
 </style>
+
