Logo and contact ribbon

--- a/Home.css
+++ b/Home.css
@@ -33,11 +33,11 @@ h2 {
  }
  
  ul {padding:10px;
-background: black;}
+background: white;}
 li {display: inline;
-padding: 0px 10px 0px 10px;
+padding: 5px 5px 5px 5px;
 }
-a{color: white;}
+a{color: black;}
 
 </style>
 
