--- a/Home.css
+++ b/Home.css
@@ -19,7 +19,6 @@ h2 {
 	position: right;
 }
 
-
 .Aberdeen {
  	width: 180px;
  	height: 100px;
@@ -38,6 +37,19 @@ li {display: inline;
 padding: 5px 5px 5px 5px;
 }
 a{color: black;}
+
+h1 {
+	align-self: center;
+	color: black;
+	font-style: italic;
+}
+p {font-style: italic;
+	color: black;
+	font-size: 70px;
+	text-align: center;
+
+}	
+
 
 </style>
 
