--- a/Home.css
+++ b/Home.css
@@ -13,7 +13,7 @@
 }
 
 
-.carousel-inner img {
+.kingscollegeslideshow img {
     -webkit-filter: grayscale(90%);
     filter: grayscale(90%); /* make all photos black and white */ 
     width: 100%; /* Set width to 100% */
