--- a/Home.css
+++ b/Home.css
@@ -311,4 +311,14 @@ $(document).ready(function(){
     // Initialize Tooltip
     $('[data-toggle="tooltip"]').tooltip(); 
 })
+
+<style>
+.bg-1 {
+    background: #2d2d30;
+    color: #bdbdbd;
+}
+.bg-1 h3 {color: #fff;}
+.bg-1 p {font-style: italic;}
+</style>
+
 </script>
