--- a/Home.css
+++ b/Home.css
@@ -67,16 +67,16 @@
 /* Add a dark background color with a little bit see-through */ 
 .navbar {
     margin-bottom: 0;
-    background-color: #2d2d30;
+    background-color: #fff;
     border: 0;
     font-size: 11px !important;
     letter-spacing: 4px;
-    opacity:0.9;
+    
 }
 
 /* Add a gray color to all navbar links */
 .navbar li a, .navbar .navbar-brand { 
-    color: #d5d5d5 !important;
+    color: #fff !important;
 }
 
 /* On hover, the links will turn white */
@@ -87,28 +87,26 @@
 /* The active link */
 .navbar-nav li.active a {
     color: #fff !important;
-    background-color:#29292c !important;
+    background-color:#fff !important;
 }
 
 /* Remove border color from the collapsible button */
-.navbar-default .navbar-toggle {
-    border-color: transparent;
-}
+.navbar-default .navbar-toggle 
 
 /* Dropdown */
 .open .dropdown-toggle {
-    color: #fff ;
-    background-color: #555 !important;
+    color: #FFFFFF;
+    background-color: #FFFFFF !important;
 }
 
 /* Dropdown links */
 .dropdown-menu li a {
-    color: #000 !important;
+    color: #FFFFFF !important;
 }
 
 /* On hover, the dropdown links will turn red */
 .dropdown-menu li a:hover {
-    background-color: red !important;
+    background-color: #FFFFFF !important;
 }
 
 <style>
