--- a/Home.css
+++ b/Home.css
@@ -238,7 +238,7 @@ textarea {
 /* Add a dark background color with a little bit see-through */ 
 .navbar {
     margin-bottom: 0;
-    background-color: #2d2d30;
+    background-color: #FFFFFFA;
     border: 0;
     font-size: 11px !important;
     letter-spacing: 4px;
