Fixed nav bar colours

--- a/Home.css
+++ b/Home.css
@@ -68,7 +68,7 @@
 /* Add a dark background color with a little bit see-through */ 
 .navbar {
     margin-bottom: 0;
-    background-color: #000000;
+    background-color: #FFFFFF;
     border: 0;
     font-size: 11px !important;
     letter-spacing: 4px;
@@ -151,8 +151,8 @@ $(document).ready(function(){
 
 /* The active link */
 .navbar-nav li.active a {
-    color: #000000 !important;
-    background-color:#000000 !important;
+    color: #808080 !important;
+    background-color:#FFFFFF !important;
 }
 
 /* Remove border color from the collapsible button */
