--- a/Home.css
+++ b/Home.css
@@ -173,7 +173,7 @@ $(document).ready(function(){
 
 /* On hover, the dropdown links will turn red */
 .dropdown-menu li a:hover {
-    background-color: blue !important;
+    background-color: black !important;
 }
 
 <style>
