--- a/Home.css
+++ b/Home.css
@@ -251,4 +251,18 @@ div {
     height: 200px
     width: 50%;
 }
+footer {
+    background-color: #2d2d30;
+    color: #f5f5f5;
+    padding: 40px;
+}
+
+footer a {
+    color: #f5f5f5;
+}
+
+footer a:hover {
+    color: #777;
+    text-decoration: none;
+}
 </script>
