--- a/Home.css
+++ b/Home.css
@@ -15,12 +15,10 @@
 }
 
 .person:hover {
-    border-color: #f1f1f;
+    border-color: #f1f1f1;
 }
 
 .kingscollegeslideshow img {
-    -webkit-filter: grayscale(90%);
-    filter: grayscale(80%); /* make all photos black and white */ 
     width: 100%; /* Set width to 100% */
     margin: auto;
 }
