--- a/Home.css
+++ b/Home.css
@@ -40,6 +40,50 @@
     }
 }
 
+.container {
+    padding: 80px 120px;
+    
+}
+
+.person {
+    border: 10px solid transparent;
+    margin-bottom: 25px;
+    width: 50%;
+    height: 50%;
+}
+
+.Logo2 {opacity: 0.9;bg
+
+}
+
+.person:hover {
+    border-color: #f1f1f1;
+}
+
+.kingscollegeslideshow img {
+    -webkit-filter: grayscale(90%);
+    filter: grayscale(80%); /* make all photos black and white */ 
+    width: 100%; /* Set width to 100% */
+    margin: auto;
+}
+
+.carousel-caption h3 {
+    color: #fff !important;
+    letter-spacing: 1px;
+}
+.heading h3 {
+    letter-spacing: 1px;
+}
+.mapgoog h3 {
+    letter-spacing: 1px;
+}
+
+@media (max-width: 600px) {
+    .carousel-caption {
+        display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
+    }
+}
+
 /* Remove rounded borders from list */
 .list-group-item:first-child {
     border-top-right-radius: 0;
@@ -216,6 +260,223 @@ h3, h4 {
 /* Remove rounded borders on input fields */
 .form-control {
     border-radius: 0;
+}
+
+/* Disable the ability to resize textareas */
+textarea {
+    resize: none;
+}
+/* Add a dark background color with a little bit see-through */ 
+.navbar {
+    margin-bottom: 0;
+    background-color: #FFFFFF;
+    border: 0;
+    font-size: 11px !important;
+    letter-spacing: 4px;
+    opacity:0.9;
+}
+
+/
+
+<script>
+$(document).ready(function(){
+    // Initialize Tooltip
+    $('[data-toggle="tooltip"]').tooltip(); 
+})
+
+
+<style>
+.nav-tabs li a {
+    color: #777;
+}
+div {
+    height: 200px
+    width: 50%;
+}
+</script>
+
+/* Remove rounded borders from list */
+.list-group-item:first-child {
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+}
+
+.list-group-item:last-child {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+/* Remove border and add padding to thumbnails */
+.thumbnail {
+    padding: 0 0 15px 0;
+    border: none;
+    border-radius: 0;
+}
+
+.thumbnail p {
+    margin-top: 15px;
+    color: #555;
+}
+
+/* Black buttons with extra padding and without rounded borders */
+.btn {
+    padding: 10px 20px;
+    background-color: #333;
+    color: #f1f1f1;
+    border-radius: 0;
+    transition: .2s;
+}
+/* Add a dark background color with a little bit see-through */ 
+.navbar {
+    margin-bottom: 0;
+    background-color: #FFFFFF;
+    border: 0;
+    font-size: 11px !important;
+    letter-spacing: 4px;
+    
+}
+
+/* Add a gray color to all navbar links */
+.navbar li a, .navbar .navbar-brand { 
+    color: #808080 !important;
+}
+
+/* On hover, the links will turn white */
+.navbar-nav li a:hover {
+    color: #808080 !important;
+}
+
+/* The active link */
+.navbar-nav li.active a {
+    color: #808080 !important;
+    background-color:#ffffff !important;
+}
+
+/* Remove border color from the collapsible button */
+.navbar-default .navbar-toggle 
+
+/* Dropdown */
+.open .dropdown-toggle {
+    color: #FFFFFF;
+    background-color: #FFFFFF !important;
+}
+
+/* Dropdown links */
+.dropdown-menu li a {
+    color: #FFFFFF !important;
+}
+
+/* On hover, the dropdown links will turn red */
+.dropdown-menu li a:hover {
+    background-color: #FFFFFF !important;
+}
+
+<style>
+/* Add a dark background color to the footer */
+footer {
+    background-color: #2d2d30;
+    color: #f5f5f5;
+    padding: 32px;
+    width: 100%;
+    height: 50%;
+    position:absolute;
+    bottom: 0;
+    left: 0;
+}
+
+footer a {
+    color: #f5f5f5;
+}
+
+footer a:hover {
+    color: #777;
+    text-decoration: none;
+}
+
+</style>
+
+/* On hover, the color of .btn will transition to white with black text */
+.btn:hover, .btn:focus {
+    border: 1px solid #333;
+    background-color: #fff;
+    color: #fff;
+}
+
+
+/* The active link */
+.navbar-nav li.active a {
+    color: #808080 !important;
+    background-color:#FFFFFF !important;
+}
+
+/* Remove border color from the collapsible button */
+.navbar-default .navbar-toggle {
+    border-color: transparent;
+}
+
+/* Dropdown */
+.open .dropdown-toggle {
+    color: #fff ;
+    background-color: #555 !important;
+}
+
+/* Dropdown links */
+.dropdown-menu li a {
+    color: #000 !important;
+}
+
+/* On hover, the dropdown links will turn red */
+.dropdown-menu li a:hover {
+    background-color: black !important;
+}
+
+<style>
+/* Add a dark background color to the footer */
+#footer {
+    background-color: #2d2d30;
+    position: absolute;
+    bottom: 0;
+    color: #f5f5f5;
+    padding: 32px;
+    width: 100%;
+}
+#footer
+{
+    margin: auto;
+    text-align: center;
+    width: 1200px;
+    height: 150px;
+}
+#footer a {
+    color: #f5f5f5;
+    width: 1200px;
+}
+
+#footer a:hover {
+    color: #777;
+    text-decoration: none;
+}
+body {
+    font: 400 15px/1.8 Lato, sans-serif;
+    color: #777;
+    margin: 0px;
+}
+
+.navbar {
+    font-family: Montserrat, sans-serif;
+}
+/* Overwrite default styles of h3 and h4 */
+h3, h4 {
+    margin: 10px 0 30px 0;
+    letter-spacing: 10px; 
+    font-size: 20px;
+    color: #111;
+}
+
+/* Remove rounded borders on input fields */
+.form-control {
+    border-radius: 0;
+    background-color: gray;
 }
 
 /* Disable the ability to resize textareas */
