--- a/Home.css
+++ b/Home.css
@@ -1,6 +1,13 @@
 .container {
     padding: 80px 120px;
+    width: 100%;
+    padding: 30px 0px;
+    background-color: #D3D3D3;
     
+}
+.colored-block {
+    width: 100%;
+    padding:;
 }
 
 .person {
@@ -38,7 +45,6 @@
     .carousel-caption {
         display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
     }
-}
 
 <style>
 .bg-1 {
@@ -128,7 +134,7 @@
 
 <style>
 /* Add a dark background color to the footer */
-footer {
+#footer {
     background-color: #2d2d30;
     color: #f5f5f5;
     padding: 32px;
@@ -139,11 +145,12 @@ footer {
     left: 0;
 }
 
-footer a {
+#footer a {
     color: #f5f5f5;
+    width: 100%;
 }
 
-footer a:hover {
+#footer a:hover {
     color: #777;
     text-decoration: none;
 }
