--- a/Home.css
+++ b/Home.css
@@ -2,14 +2,21 @@
     padding: 80px 120px;
     width: 100%;
     padding: 30px 0px;
-    background-color: #D3D3D3;
-    
-}
-.colored-block {
-    width: 100%;
-    padding:;
+    background-color: #ffffff;
 }
 
+#aboutus {
+    padding: 80px 120px;
+    width: 100%;
+    padding: 30px 0px;
+    background-color: #D3D3D3;
+}
+#contact {
+    padding: 80px 120px;
+    width: 100%;
+    padding: 30px 0px;
+    background-color: #D3D3D3;
+}
 .person {
     border: 10px solid transparent;
     margin-bottom: 25px;
@@ -36,6 +43,7 @@
 }
 .heading h3 {
     letter-spacing: 1px;
+    font: bold;
 }
 .mapgoog h3 {
     letter-spacing: 1px;
@@ -45,16 +53,6 @@
     .carousel-caption {
         display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
     }
-
-<style>
-.bg-1 {
-    background-color: #2d2d30;
-    color: #bdbdbd;
-}
-.bg-1 h3 {color: #000000;}
-.bg-1 h3 {letter-spacing: 1px}
-.bg-1 p {font-style: italic;}
-</style>
 
 /* Remove rounded borders from list */
 .list-group-item:first-child {
