--- a/Home.css
+++ b/Home.css
@@ -9,7 +9,7 @@
     padding: auto;
     width: 100%;
     padding: 30px 0px;
-    background-color: #D3D3D3;
+    background-color: #FFFFFF;
 }
 #contact {
     padding: 80px 120px;
@@ -17,6 +17,12 @@
     padding: 30px 0px;
     background-color: #D3D3D3;
 }
+#sellbuy {
+    padding: 80px 120px;
+    width: 100%;
+    padding: 30px 0px;
+    background-color: #D3D3D3;
+
 .person {
     border: 10px solid transparent;
     margin-bottom: 25px;
