--- a/Home.css
+++ b/Home.css
@@ -288,3 +288,9 @@ footer a:hover {
     text-decoration: none;
 }
 </script>
+<style>
+#googleMap {
+    width: 100%; /* Span the entire width of the screen */
+    height: 400px; /* Set the height to 400 pixels */
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%); /* Change the color of the map to black and white * /
