--- a/Home.css
+++ b/Home.css
@@ -138,32 +138,22 @@
 
 <style>
 /* Add a dark background color to the footer */
-#footer {
+footer {
     background-color: #2d2d30;
     color: #f5f5f5;
     padding: 32px;
-    width: 100%;
-    height: 50%;
-    position:absolute;
-    bottom: 0;
-    left: 0;
 }
 
-#footer a {
+footer a {
     color: #f5f5f5;
-    width: 100%;
 }
 
-
-
+footer a:hover {
+    color: #777;
+    text-decoration: none;
+}
 </style>
 
-/* On hover, the color of .btn will transition to white with black text */
-.btn:hover, .btn:focus {
-    border: 1px solid #333;
-    background-color: #fff;
-    color: #fff;
-}
 
 
 /* The active link */
@@ -293,4 +283,4 @@ footer a:hover {
     width: 100%; /* Span the entire width of the screen */
     height: 400px; /* Set the height to 400 pixels */
     -webkit-filter: grayscale(100%);
-    filter: grayscale(100%); /* Change the color of the map to black and white * /
+    filter: grayscale(100%); /* Change the color of the map to black and white * 
