--- a/Home.css
+++ b/Home.css
@@ -154,7 +154,9 @@ footer a:hover {
 }
 </style>
 
-
+#mypage {
+    width: 100%;
+}
 
 /* The active link */
 .navbar-nav li.active a {
@@ -267,8 +269,16 @@ footer {
     background-color: #2d2d30;
     color: #f5f5f5;
     padding: 40px;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
 }
-
+#footer
+{width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    background-color: #2d2d30;
+}
 footer a {
     color: #f5f5f5;
 }
